<?xml version='1.0' encoding='utf-8'?>
<ui version="4.0">
  <!-- Generated for PYSIDE6 -->
  <class>ConnectionTest</class>
  <widget class="QDialog" name="ConnectionTest">
    <property name="geometry">
      <rect>
        <x>0</x>
        <y>0</y>
        <width>400</width>
        <height>300</height>
      </rect>
    </property>
    <property name="windowTitle">
      <string>ConnectionTest</string>
    </property>
    <widget class="QPushButton" name="okButton">
      <property name="text">
        <string>OK</string>
      </property>
      <property name="geometry">
        <rect>
          <x>150</x>
          <y>200</y>
          <width>100</width>
          <height>40</height>
        </rect>
      </property>
    </widget>
  </widget>
  <connections>
    <connection>
      <sender>okButton</sender>
      <signal>clicked()</signal>
      <receiver>ConnectionTest</receiver>
      <slot>accept()</slot>
    </connection>
  </connections>
</ui>
